# insightpy

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish.yml
insightpy/core/feature/: categorical_feature.py  numerical_feature.py
tests/: test_feature_type.py  test_missing_values.py  test_numerical_handler.py
