[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-profiler-x"
version = "0.0.1"
description = "A data profiling library for in-depth data analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

[project.authors]
name = "habib-z"
email = "my.email@gmail.com"

[project.urls]
homepage = "https://github.com/habib-z/data-profiler-x"

[project.dependencies]
pandas = ">=2.2.2"
setuptools = ">=75.1.0"
click = ">=8.1.7"
matplotlib = ">=3.9.2"
seaborn = ">=0.13.2"
numpy = ">=1.26.4"

[project.optional-dependencies]
dev = ["pytest>=6.0", "flake8>=3.8"]

[project.scripts]
data-profiler = "insightpy.cli.profiler_cli:profile"
